openshift/dc-enrollments-accounts-api.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
  creationTimestamp: null
  generation: 1
  labels:
    app: enrollments-accounts-api
  name: enrollments-accounts-api
  selfLink: /apis/apps.openshift.io/v1/namespaces/mongodb/deploymentconfigs/enrollments-accounts-api
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    deploymentconfig: enrollments-accounts-api
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: enrollments-accounts-api
        deploymentconfig: enrollments-accounts-api
    spec:
      containers:
      - env:
        - name: enrollments.service.endpoint
          value: http://enrollments-app-mongodb.b9ad.pro-us-east-1.openshiftapps.com
        - name: server.contextPath
          value: /api/enrollments/1.0.0
        - name: server.port
          value: "8080"
        - name: spring.jackson.date-format
          value: io.swagger.RFC3339DateFormat
        - name: spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS
          value: "false"
        image: docker-registry.default.svc:5000/mongodb/enrollments-accounts-api@sha256:7fb12a0a84a0cfaafd8df7807e0fca21ba245f2cf91f1596f3b29548e99491e7
        imagePullPolicy: Always
        name: enrollments-accounts-api
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - enrollments-accounts-api
      from:
        kind: ImageStreamTag
        name: enrollments-accounts-api:latest
        namespace: mongodb
    type: ImageChange
  - type: ConfigChange
status:
  availableReplicas: 0
  latestVersion: 0
  observedGeneration: 0
  replicas: 0
  unavailableReplicas: 0
  updatedReplicas: 0
