openshift/route-enrollments-accounts-api.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  creationTimestamp: null
  labels:
    app: enrollments-accounts-api
  name: enrollments-accounts-api
  selfLink: /apis/route.openshift.io/v1/namespaces/mongodb/routes/enrollments-accounts-api
spec:
  host: enrollments-accounts-api-mongodb.b9ad.pro-us-east-1.openshiftapps.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: enrollments-accounts-api
    weight: 100
  wildcardPolicy: None
status:
  ingress: null
